[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/rexlia rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.690196, 0.690196, 0.690196, 0.0941176 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.796078 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.368627, 0.388235, 0.384314, 0.588235 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -165.0
margin_right = 305.0
margin_bottom = -53.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = 4.0
margin_right = 305.0
margin_bottom = 116.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = 183.0
margin_right = 305.0
margin_bottom = 295.0
focus_neighbour_top = NodePath("../ResumeButton")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
